MMA-7633 Rydding og fjerning av ubrukt kode